# parkinsons_pulse_service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: deployment.yml  service_check.yml  service_pr_check.yml
http/: create_form.http  create_user.http  database_example.http  database_read_example.http  database_write_example.http  get_user.http  health.http  push_form_answers.http  submit_form.http
src/: config.rs  lib.rs  main.rs  tracing.rs
src/app/: health.rs  mod.rs  state.rs
src/app/auth/: middleware.rs  mod.rs  utils.rs
src/app/caregiver/: add.rs  find.rs  generate.rs  mod.rs  remove.rs
src/app/form/: create.rs  find.rs  history.rs  mod.rs  push_answers.rs  submit.rs
src/app/medication/: add.rs  find.rs  mod.rs  remove.rs  update.rs
src/app/middleware/: auth.rs
src/app/models/: mod.rs
src/app/models/dto/: caregiver.rs  form.rs  medication.rs  mod.rs  user.rs
src/app/routes/: auth.rs
src/app/user/: create.rs  get.rs  mod.rs
src/app/utils/: auth.rs
src/metrics/: logging.rs  mod.rs
terraform/: alb.tf  api.tf  db.tf  dns.tf  ecs.tf  mongo.tf  outputs.tf  providers.tf  repo.tf  routing.tf  security_groups.tf  vpc.tf
util/: healthcheck.sh
